Update randomization lectures

--- a/Randomization_simulation_methods/2.1-Sampling_from_datasets.qmd
+++ b/Randomization_simulation_methods/2.1-Sampling_from_datasets.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Distributions and Null Models"
-subtitle: ""
+title: "Sampling from Datasets: Foundations"
+subtitle: "Introduction"
 author:
   - Elizabeth King
   - Kevin Middleton
